--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <button class="btn btn-no" id="noBtn" type="button">No 🖕</button>
             </div>
             <div class="toast" id="toast" role="status" aria-live="polite">
-                <div class="toast-title">TYPE SHIIIIIIII !!!!!!!!!!!!! LFGGGG 🔥</div>
+                <div class="toast-title">TYPE SHIIIIIIIIT!!!!!!!!!!!!! LFGGGG 🔥</div>
                 You said <strong>YES</strong>!!! I’m taking you on the best date ever.
             </div>
         </section>
