--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="sparkles" aria-hidden="true" id="sparkles"></div>
     <main class="wrap">
         <section class="card">
-            <h1>Will you be my Valentine, Vanessa??  💘</h1>
+            <h1>Will you be my Valentine, Vanessa?? </h1>
             <p>
                 You're the most amazing addition to my life and I love you so so so so so much.<br />
                 Let’s make our first Valentines together special :)
@@ -24,7 +24,7 @@
             </div>
             <div class="toast" id="toast" role="status" aria-live="polite">
                 <div class="toast-title">TYPE SHIIIIIIIIT!!!!!!!!!!!!! LFGGGG 🔥</div>
-                You said <strong>YES</strong>!!! I’m taking you on the best date ever.
+                So excited to celebrate our first Valentines together my babyyyy ❤️
             </div>
         </section>
     </main>
