--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="sparkles" aria-hidden="true" id="sparkles"></div>
     <main class="wrap">
         <section class="card">
-            <h1>Will you be my Valentine, Vanessa?? </h1>
+            <h1>Will you be my Valentine, Vanessa?? 🌹</h1>
             <p>
                 You're the most amazing addition to my life and I love you so so so so so much.<br />
                 Let’s make our first Valentines together special :)
@@ -23,7 +23,7 @@
                 <button class="btn btn-no" id="noBtn" type="button">No 🖕</button>
             </div>
             <div class="toast" id="toast" role="status" aria-live="polite">
-                <div class="toast-title">TYPE SHIIIIIIIIT!!!!!!!!!!!!! LFGGGG 🔥</div>
+                <div class="toast-title">YAYYY!</div>
                 So excited to celebrate our first Valentines together my babyyyy ❤️
             </div>
         </section>
